# phone-lookup

./: .gitignore  Makefile  Makefile.bat  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_store.py
src/phone_lookup/: __init__.py  _lmdb_stub.py  cli.py  database.py  importer.py  store.py
tests/: __init__.py  test_cli.py  test_database.py  test_importer.py  test_store.py
