[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-lookup"
version = "0.1.0"
description = "CLI utilities for bulk phone number lookups backed by LMDB"
requires-python = ">=3.10"
dependencies = [
    "lmdb>=1.4.1",
    "termcolor>=2.0.0,<3",
    "colorama>=0.4.6 ; platform_system == 'Windows'",
]

[project.scripts]
phone-lookup = "phone_lookup.cli:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
